--- a/src/JGM/AgpBundle/Resources/views/Entrega/show.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Entrega/show.html.twig
@@ -9,7 +9,48 @@
                  <div class="clearfix"></div>
             </div>
             <div class="x_content">
-                {{ entity.nombre }}
+                <h3>{{ entity.cliente.getNombre }}</h3>
+                                <p>{{ entity.fecha | date('d-m-Y') }}</p>  
+                                <p>Contacto: {{ entity.cliente.contacto }}</p>
+                                <p>Dirección:  {{ entity.cliente.direccion }}</p> 
+                                <p>Modalidad de pago:  <span class="label label-primary">{{ entity.cliente.modalidadPago }}</span></p> 
+
+                                {% if entity.descuentoEspecial %}
+                                    <span class="label label-success">Descuento especial: {{ entity.descuentoEspecial }}</span>
+                                {% endif %}
+                                {% if entity.pagoRealizado %}
+                                    <span class="label label-success">Pago realizado: {{ entity.pagoRealizado }}</span>
+                                {% endif %}
+                                {% if entity.limpiezaRealizada %}
+                                    <span class="label label-success">Limpieza realizada: {{ entity.limpiezaRealizada }}</span>
+                                {% endif %}
+                                {% if entity.co2Entregados %}
+                                    <span class="label label-success">Co2 Entregados: {{ entity.co2Entregados }}</span>
+                                {% endif %} 
+                                {% if entity.co2Retirados %}
+                                    <span class="label label-success">Co2 Retirados: {{ entity.co2Retirados }}</span>
+                                {% endif %}
+                                {% if entity.co2Backup %}
+                                    <span class="label label-success">Co2 Backup: {{ entity.co2Backup }}</span>
+                                {% endif %}
+                                {% if entity.barrilesEntregados %}
+                                    <span class="label label-success">Barriles Entregados: {{ entity.barrilesEntregados }}</span>
+                                {% endif %} 
+                                {% if entity.barrilesRetirados %}
+                                    <span class="label label-success">Barriles Retirados: {{ entity.barrilesRetirados }}</span>
+                                {% endif %}
+                                {% if entity.barrilesCliente %}
+                                    <span class="label label-success">Barriles Backup: {{ entity.barrilesCliente }}</span>
+                                {% endif %}
+                                <ul class="to_do">
+                                    {% for producto in entity.getProductos %} 
+                                        <li>
+                                            <p>
+                                                {{ producto.producto.nombre }}, {{ producto.producto.litros }} lts.
+                                            </p>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
             </div>
         </div>
     </div>
