Desarrollando app arrecifes

--- a/src/JGM/AgpBundle/Resources/views/Entrega/index.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Entrega/index.html.twig
@@ -7,7 +7,7 @@
         <div class="x_panel">
             <div class="x_title">
                 <h2>Listado de entregas</h2>
-                <a href="{{ path('entrega_stepdatoscarga') }}" class="pull-right btn btn-dark"> <i class="glyphicon glyphicon-file">
+                <a href="{{ path('entrega_stepentrega') }}" class="pull-right btn btn-dark"> <i class="glyphicon glyphicon-file">
                                                                 </i> Nueva entrega </a>
                  <div class="clearfix"></div>
             </div>
