--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -62,9 +62,9 @@
                   </li>
                   <li><a><i class="glyphicon glyphicon-file"></i>  Entregas <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: none">
-                      <li><a href="{{ path('entrega') }}">Listado</a>
+                      <li><a href="{{ path('entregalist') }}">Listado</a>
                       </li>
-                      <li><a href="{{ path('entrega_stepdatoscarga') }}">Nueva entrega</a>
+                      <li><a href="{{ path('entrega_stepentrega') }}">Nueva entrega</a>
                       </li>      
                     </ul>
                   </li>
