--- a/src/JGM/AgpBundle/Resources/views/Producto/index.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Producto/index.html.twig
@@ -12,6 +12,7 @@
                  <div class="clearfix"></div>
             </div>
             <div class="x_content">
+                {% include ":includes:flashes.html.twig" %}
                 <table id="example" class="table table-striped responsive-utilities jambo_table">
                     <thead>
                         <tr class="headings">            
