--- a/src/JGM/AgpBundle/Resources/views/Cliente/index.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Cliente/index.html.twig
@@ -14,6 +14,7 @@
                     <div class="clearfix"></div>
                 </div>  
                 <div class="x_content">
+                    {% include ":includes:flashes.html.twig" %}
                     <div class="row">
                         <div class="clearfix"></div>
 
